using UnityEngine;

public static class Constants
{
    //Action Map
    public static string ActionMapPlayer = "Player";
    public static string ActionMapUI = "UI";
    
    //AudioMixer Parameters
    public static string MasterVolume = "MasterVolume";
    public static string MusicVolume = "MusicVolume";
    public static string SoundVolume = "SoundVolume";
    
    //General setting 
    public static string Windowed = "Windowed";
    public static string WindowedNoBorder = "Windowed no border";
    public static string Fullscreen = "Fullscreen";
    public static string ScreenMode = "screenMode";
    public static string Width = "width";
    public static string Height = "height";
    public static string Refresh = "refresh";
    public static string RefreshUnlimited = "Unlimited";
    public static string VSync = "VSync";
    
    //Graphic setting
    public static string LowProfile = "Low";
    public static string MediumProfile = "Medium";
    public static string HighProfile = "High";
    public static string UltraProfile = "Ultra";
    public static string CustomProfile = "Custom";
    public static string AntiAliasingDisable = "Disable";
    public static string AntiAliasingX2= "MSAA 2x";
    public static string AntiAliasingX4 = "MSAA 4x";
    public static string AntiAliasingX8 = "MSAA 8x";
    
    public static string QualityLevel = "QualityLevel";
    public static string AntiAliasing = "AntiAliasing";
    public static string ShadowResolution = "ShadowResolution";
    public static string ShadowDistance = "ShadowDistance";
    public static string TextureQuality = "TextureQuality";
    public static string RenderScale = "RenderScale";
    
    //Name object to refer in scene
    public static string SwimPos = "lookAt";
    public static string LookAt = "lookAt";
    
    //Animator Parameter
    public static string IsMoving = "IsMoving";
    public static string IsRunning = "IsRunning";
    public static string IsFalling = "IsFalling";
    public static string IsSwimming = "IsSwimming";
    

}
